[project]
name = "stoc-price-chart"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki-etu", email = "yuki.abcba369@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "japanize-matplotlib>=1.1.3",
    "plotly>=5.22.0",
    "pandas-datareader>=0.10.0",
    "jupyter>=1.0.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stoc_price_chart"]
